feat: adicionando produto para venda complet

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_URL=http://localhost:5000
+VITE_API_URL= https://projeto18-freela-7a5b.onrender.com
+
+# VITE_API_URL=http://localhost:5000
