--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ionicons": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.7"
